Setup Bouncer and setup isAdmin ability to check if authenticated user is admin. Removed auth middleware from endpoints that dont need it, eg. shows.
