# backend/start/routes.ts
@@ -33,32 +33,36 @@ router
     router.post('/users/login', [AuthController, 'login'])
     router.post('/users/logout', [AuthController, 'logout']).use(middleware.auth())
 
-    router.get('/users/:user_id/sets', [SetsController, 'userIndex']).use(middleware.auth())
-    router.get('/collections/random', [CollectionsController, 'indexRandom']).use(middleware.auth())
+    router.get('/users/:user_id/sets', [SetsController, 'userIndex'])
+    router.get('/collections/random', [CollectionsController, 'indexRandom'])
     router.post('/users', [UsersController, 'store']).use(middleware.auth())
     router.post('/sets', [SetsController, 'store']).use(throttle).use(middleware.auth())
     router.post('sets/update-limit', [LimitsController, 'updateLimit']).use(middleware.auth())
-    router.post('sets/get-limit', [LimitsController, 'getLimit']).use(middleware.auth())
+    router.get('sets/get-limit', [LimitsController, 'getLimit'])
     router
-      .post('sets/get-remaining-requests', [LimitsController, 'getRemainingRequests'])
+      .get('sets/get-remaining-requests', [LimitsController, 'getRemainingRequests'])
       .use(middleware.auth())
 
-    router.resource('sets', SetsController).apiOnly().except(['store']).use('*', middleware.auth())
+    router
+      .resource('sets', SetsController)
+      .apiOnly()
+      .except(['store'])
+      .use(['update', 'destroy'], middleware.auth())
     router.resource('set.comment', CommentsController).only(['store']).use('*', middleware.auth())
-    router.resource('sets.cards', CardsController).only(['index']).use('*', middleware.auth())
+    router.resource('sets.cards', CardsController).only(['index'])
     router
       .resource('users', UsersController)
       .apiOnly()
       .except(['store'])
       .where('id', router.matchers.number())
-      .use('*', middleware.auth())
+      .use(['destroy', 'update'], middleware.auth())
     router
       .resource('collections', CollectionsController)
       .only(['index', 'store'])
-      .use('*', middleware.auth())
+      .use(['store'], middleware.auth())
     router
       .resource('users.collections', UserCollectionsController)
       .only(['index', 'show', 'update', 'destroy'])
-      .use('*', middleware.auth())
+      .use(['destroy', 'update'], middleware.auth())
   })
   .prefix('/api')
