# openapi.yaml
@@ -124,16 +124,6 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/FlashcardSet"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
     post:
       summary: "Create a new flashcard set"
       description: "There can only be 20 new flashcard sets created per day"
@@ -202,16 +192,6 @@ paths:
                               example: "I love this set!"
                             author:
                               $ref: "#/components/schemas/User"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
         "404":
           description: "The flashcard set was not found"
           content:
@@ -275,7 +255,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
   /sets/update-limit:
-    get:
+    post:
       summary: "Update Limit of Flashcard Sets that can be created each day."
       tags:
         - "FlashCard Sets"
@@ -309,16 +289,6 @@ paths:
                   limit:
                     type: "number"
                     example: 20
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
         "404":
           description: "Limit not found"
   /sets/get-remaining-requests:
@@ -336,16 +306,6 @@ paths:
                   limit:
                     type: "number"
                     example: 5
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
         "404":
           description: "Remaining Limit not found"
   /set/{setID}/comment:
@@ -424,16 +384,6 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/FlashCard"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
         "404":
           description: "The flashcard set was not found"
           content:
@@ -454,16 +404,6 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/User"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
     post:
       summary: "Create a new user"
       tags:
@@ -524,16 +464,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
         "404":
           description: "The user was not found"
           content:
@@ -627,16 +557,6 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/FlashcardSet"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
         "404":
           description: "The user was not found"
           content:
@@ -658,21 +578,28 @@ paths:
                 items:
                   type: "object"
                   properties:
-                    comment:
+                    name:
                       type: "string"
-                      description: "The user's comment on the set"
-                    set:
-                      $ref: "#/components/schemas/FlashcardSet"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
+                      example: "Geography Sets"
+                    sets:
+                      type: "array"
+                      items:
+                        type: "object"
+                        properties:
+                          comment:
+                            type: "string"  
+                            description: "The user's comment on the set"
+                          set:
+                            $ref: "#/components/schemas/FlashcardSet"
+                    user:
+                      type: "object"
+                      properties:
+                        id:
+                          type: string
+                          example: "1"
+                        username:
+                          type: string
+                          example: "JohnDoe"
   /users/{userID}/collections/{collectionID}:
     parameters:
       - name: userID
@@ -699,23 +626,28 @@ paths:
               schema:
                 type: "object"
                 properties:
-                  comment:
+                  name:
                     type: "string"
-                    description: "The user's comment on the set"
-                  set:
-                    $ref: "#/components/schemas/FlashcardSet"
+                    example: "Geography Sets"
+                  sets:
+                    type: "array"
+                    items:
+                      type: "object"
+                      properties:
+                        comment:
+                          type: "string"  
+                          description: "The user's comment on the set"
+                        set:
+                          $ref: "#/components/schemas/FlashcardSet"
                   user:
-                    $ref: "#/components/schemas/User"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
+                    type: "object"
+                    properties:
+                      id:
+                        type: string
+                        example: "1"
+                      username:
+                        type: string
+                        example: "JohnDoe"
         "404":
           description: "The flashcard set collection was not found"
           content:
@@ -733,9 +665,29 @@ paths:
             schema:
               type: "object"
               properties:
-                comment:
+                name:
                   type: "string"
-                  example: "I love this set!"
+                  example: "Geography Sets"
+                sets:
+                  type: "array"
+                  items:
+                    type: "object"
+                    properties:
+                      comment:
+                        type: "string"
+                        example: "I love this set!"
+                      setID:
+                        type: "number"
+                        example: 1
+                user:
+                  type: "object"
+                  properties:
+                    id:
+                      type: "string"
+                      example: "user123"
+                    username:
+                      type: "string"
+                      example: "john_doe"
       responses:
         "200":
           description: "The updated flashcard set collection"
@@ -809,23 +761,28 @@ paths:
                 items:
                   type: "object"
                   properties:
-                    comment:
+                    name:
                       type: "string"
-                      description: "The user's comment on the set"
-                    set:
-                      $ref: "#/components/schemas/FlashcardSet"
-                    User:
-                      $ref: "#/components/schemas/User"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
+                      example: "Geography Sets"
+                    sets:
+                      type: "array"
+                      items:
+                        type: "object"
+                        properties:
+                          comment:
+                            type: "string"  
+                            description: "The user's comment on the set"
+                          set:
+                            $ref: "#/components/schemas/FlashcardSet"
+                    user:
+                      type: "object"
+                      properties:
+                        id:
+                          type: string
+                          example: "1"
+                        username:
+                          type: string
+                          example: "JohnDoe"
     post:
       summary: "Create a new flashcard set collection"
       tags:
@@ -835,16 +792,31 @@ paths:
         content:
           application/json:
             schema:
-              type: "array"
-              items:
-                type: "object"
-                properties:
-                  comment:
-                    type: "string"
-                    example: "I love this set!"
-                  setID:
-                    type: "number"
-                    example: 1
+              type: "object"
+              properties:
+                name:
+                  type: "string"
+                  example: "Geography Sets"
+                sets:
+                  type: "array"
+                  items:
+                    type: "object"
+                    properties:
+                      comment:
+                        type: "string"
+                        example: "I love this set!"
+                      setID:
+                        type: "number"
+                        example: 1
+                user:
+                  type: "object"
+                  properties:
+                    id:
+                      type: "string"
+                      example: "user123"
+                    username:
+                      type: "string"
+                      example: "john_doe"
 
       responses:
         "201":
@@ -854,13 +826,29 @@ paths:
               schema:
                 type: "object"
                 properties:
-                  comment:
+                  name:
                     type: "string"
-                    description: "The user's comment on the set"
-                  set:
-                    $ref: "#/components/schemas/FlashcardSet"
+                    example: "Geography Sets"
+                  sets:
+                    type: "array"
+                    items:
+                      type: "object"
+                      properties:
+                        comment:
+                          type: "string"
+                          example: "I love this set!"
+                        setID:
+                          type: "number"
+                          example: 1
                   user:
-                    $ref: "#/components/schemas/User"
+                    type: "object"
+                    properties:
+                      id:
+                        type: "string"
+                        example: "user123"
+                      username:
+                        type: "string"
+                        example: "john_doe"
         "401":
           description: "Unauthorised"
           content:
@@ -890,16 +878,6 @@ paths:
               schema:
                 type: "string"
                 example: "/users/1/collections/1"
-        "401":
-          description: "Unauthorised"
-          content:
-            application/json:
-              schema:
-                type: "object"
-                properties:
-                  message:
-                    type: string
-                    example: "Unauthorized access"
         "404":
           description: "There are no flashcard set collections"
           content:
